add election type
